--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,12 +1,14 @@
 @import 'bulma/sass/utilities/_all.sass';
 
-$cmb: orange;
+$cmb: #f5f5f5;
 
 body{
   background-color: $cmb;
-  h1{
-    color: red;
-    font-size: 2rem;
+  section{
+    text-align: center;
+    padding: 200px 0px;
+    background-color: #ccc;
+    margin-bottom: 30px;
   }
 }
 
