--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,14 +1,41 @@
-@import 'bulma/sass/utilities/_all.sass';
+@charset "utf-8";
 
-$cmb: #f5f5f5;
+// Import a Google Font
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+
+// Set your brand colors
+$purple:  #412468;
+$green-light: #009B8F;
+
+// Update Bulma's global variables
+// $family-sans-serif: "Nunito", sans-serif;
+$primary: $purple;
+$link: $green-light;
+$link-hover: lighten($green-light, 10%);
+
+// Update some of Bulma's component variables
+$control-border-width: 2px;
+$input-border-color: transparent;
+$input-shadow: none;
+
+
+@import 'bulma/sass/utilities/_all.sass';
+@import "bulma/sass/base/_all.sass";
+@import "bulma/sass/elements/button.sass";
+@import "bulma/sass/elements/container.sass";
+@import "bulma/sass/elements/title.sass";
+@import "bulma/sass/form/_all.sass";
+@import "bulma/sass/components/navbar.sass";
+@import "bulma/sass/layout/hero.sass";
+@import "bulma/sass/layout/section.sass";
 
 body{
-  background-color: $cmb;
-  section{
+  background-color: $green-light;
+  .section{
     text-align: center;
-    padding: 200px 0px;
     background-color: #ccc;
     margin-bottom: 30px;
+    padding: 200px 0;
   }
 }
 
