--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -35,7 +35,12 @@ body{
   //background-color: $green-light;
 }
 .navbar{
-  background-color: rgba($primary, 1);
+  background-color: transparent;
+  position: absolute;
+  width: 100%;
+  .navbar-burger{
+    color: $green-light;
+  }
 }
 .section{
   text-align: center;
